--- a/index.html
+++ b/index.html
@@ -259,14 +259,9 @@
                 <option value="" disabled selected>Choose a topic...</option>
                 <option value="grammar">Grammar</option>
                 <option value="vocabulary">Vocabulary</option>
-                <option value="reading-comprehension">Reading Comprehension</option>
-                <option value="writing-skills">Writing Skills</option>
-                <option value="literary-analysis">Literary Analysis</option>
-                <option value="literary-devices">Literary Devices</option>
-                <option value="pronunciation">Pronunciation</option>
+                <option value="reading-comprehension"> Comprehension</option>
                 <option value="idioms-phrases">Idioms & Phrases</option>
                 <option value="punctuation">Punctuation</option>
-                <option value="syntax">Syntax</option>
             </select>
             <button id="start-quiz">Start Quiz</button>
         </section>
@@ -312,13 +307,8 @@
             "grammar": [],
             "vocabulary": [],
             "reading-comprehension": [],
-            "writing-skills": [],
-            "literary-analysis": [],
-            "literary-devices": [],
-            "pronunciation": [],
             "idioms-phrases": [],
-            "punctuation": [],
-            "syntax": []
+            "punctuation": []
         };
         
         // Example questions for development (can be replaced later)
